// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Personal Details
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          />
                        </svg>
                        <span>
                          Completed
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    />
                  </svg>
                  <span>
                    Completed
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Primary ID
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        <span>
                          Incomplete
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 352 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                  <span>
                    Incomplete
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Secondary ID
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          />
                        </svg>
                        <span>
                          Completed
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    />
                  </svg>
                  <span>
                    Completed
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Address Information
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        <span>
                          Incomplete
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 352 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                  <span>
                    Incomplete
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Declaration Risk Management
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        <span>
                          Incomplete
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 352 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                  <span>
                    Incomplete
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Report
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        View
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div>
      <div
        class="fade-in"
      >
        <section
          class="section has-margin has-background"
          data-test=""
        >
          <div
            class="card"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <h5
                    class="title is-5"
                    id=""
                  >
                    Personal Details
                  </h5>
                </div>
                <div
                  class="media-right"
                >
                   
                  <div>
                    <div
                      class="undefined undefined"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                        />
                      </svg>
                      <span>
                        Completed
                      </span>
                    </div>
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="undefined undefined"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                  />
                </svg>
                <span>
                  Completed
                </span>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div
        class="fade-in"
      >
        <section
          class="section has-margin has-background"
          data-test=""
        >
          <div
            class="card"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <h5
                    class="title is-5"
                    id=""
                  >
                    Primary ID
                  </h5>
                </div>
                <div
                  class="media-right"
                >
                   
                  <div>
                    <div
                      class="undefined undefined"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      <span>
                        Incomplete
                      </span>
                    </div>
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="undefined undefined"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 352 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
                <span>
                  Incomplete
                </span>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div
        class="fade-in"
      >
        <section
          class="section has-margin has-background"
          data-test=""
        >
          <div
            class="card"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <h5
                    class="title is-5"
                    id=""
                  >
                    Secondary ID
                  </h5>
                </div>
                <div
                  class="media-right"
                >
                   
                  <div>
                    <div
                      class="undefined undefined"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 512 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                        />
                      </svg>
                      <span>
                        Completed
                      </span>
                    </div>
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="undefined undefined"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                  />
                </svg>
                <span>
                  Completed
                </span>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div
        class="fade-in"
      >
        <section
          class="section has-margin has-background"
          data-test=""
        >
          <div
            class="card"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <h5
                    class="title is-5"
                    id=""
                  >
                    Address Information
                  </h5>
                </div>
                <div
                  class="media-right"
                >
                   
                  <div>
                    <div
                      class="undefined undefined"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      <span>
                        Incomplete
                      </span>
                    </div>
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="undefined undefined"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 352 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
                <span>
                  Incomplete
                </span>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div
        class="fade-in"
      >
        <section
          class="section has-margin has-background"
          data-test=""
        >
          <div
            class="card"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <h5
                    class="title is-5"
                    id=""
                  >
                    Declaration Risk Management
                  </h5>
                </div>
                <div
                  class="media-right"
                >
                   
                  <div>
                    <div
                      class="undefined undefined"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        viewBox="0 0 352 512"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                        />
                      </svg>
                      <span>
                        Incomplete
                      </span>
                    </div>
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      Edit
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="undefined undefined"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 352 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  />
                </svg>
                <span>
                  Incomplete
                </span>
              </div>
            </div>
          </div>
        </section>
      </div>
      <div
        class="fade-in"
      >
        <section
          class="section has-margin has-background"
          data-test=""
        >
          <div
            class="card"
          >
            <div
              class="card-content"
            >
              <div
                class="media"
              >
                <div
                  class="media-content"
                >
                  <h5
                    class="title is-5"
                    id=""
                  >
                    Report
                  </h5>
                </div>
                <div
                  class="media-right"
                >
                   
                  <div>
                    <button
                      class="button   is-primary "
                      data-test=""
                      type="button"
                    >
                      View
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <div
        class="el-is-full-page el-loader-container"
      >
        <p
          class="el-loader-label"
        >
          Loading
        </p>
        <div
          class="el-loader"
        >
          <div
            class="el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <div
      class="el-is-full-page el-loader-container"
    >
      <p
        class="el-loader-label"
      >
        Loading
      </p>
      <div
        class="el-loader"
      >
        <div
          class="el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="el-snack-holder"
      />
      <section
        class="section has-background"
        data-test=""
      >
        <div
          class="fade-in"
        >
          <section
            class="section has-padding has-background"
            data-test=""
          >
            <div
              class="level"
              data-test=""
            >
              <div
                class="level-left"
                data-test=""
              >
                <div
                  class="level-item"
                  data-test=""
                >
                  <section
                    class="section is-flex is-flex-column has-background"
                    data-test=""
                  >
                    <h3
                      class="title is-3 mb-5"
                      id=""
                    >
                      <a
                        class="dynamic-link "
                        href="#"
                      />
                    </h3>
                    <h5
                      class="subtitle is-5"
                      id=""
                    />
                  </section>
                </div>
              </div>
              <div
                class="level-right"
                data-test=""
              >
                <div
                  class="level-item"
                  data-test=""
                >
                  <button
                    class="button   is-primary "
                    data-test=""
                    disabled=""
                    type="button"
                  >
                    Update Status
                  </button>
                </div>
              </div>
            </div>
            <div
              class="progress-bar"
            >
              <div
                class="filler"
                style="width: 0%;"
              />
            </div>
            <div
              class="has-text-right"
            >
              0
              /
              5
               
              <span>
                Completed
              </span>
            </div>
          </section>
        </div>
        <section
          class="section has-padding has-margin has-background"
          data-test=""
        >
          <div
            class="fade-in"
          >
            <section
              class="section has-margin has-background"
              data-test=""
            >
              <div
                class="card"
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="media-content"
                    >
                      <h5
                        class="title is-5"
                        id=""
                      >
                        Personal Details
                      </h5>
                    </div>
                    <div
                      class="media-right"
                    >
                       
                      <div>
                        <div
                          class="undefined undefined"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 512 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                            />
                          </svg>
                          <span>
                            Completed
                          </span>
                        </div>
                        <button
                          class="button   is-primary "
                          data-test=""
                          type="button"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="undefined undefined"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                      />
                    </svg>
                    <span>
                      Completed
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="fade-in"
          >
            <section
              class="section has-margin has-background"
              data-test=""
            >
              <div
                class="card"
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="media-content"
                    >
                      <h5
                        class="title is-5"
                        id=""
                      >
                        Primary ID
                      </h5>
                    </div>
                    <div
                      class="media-right"
                    >
                       
                      <div>
                        <div
                          class="undefined undefined"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 352 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                          <span>
                            Incomplete
                          </span>
                        </div>
                        <button
                          class="button   is-primary "
                          data-test=""
                          type="button"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="undefined undefined"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 352 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      />
                    </svg>
                    <span>
                      Incomplete
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="fade-in"
          >
            <section
              class="section has-margin has-background"
              data-test=""
            >
              <div
                class="card"
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="media-content"
                    >
                      <h5
                        class="title is-5"
                        id=""
                      >
                        Secondary ID
                      </h5>
                    </div>
                    <div
                      class="media-right"
                    >
                       
                      <div>
                        <div
                          class="undefined undefined"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 512 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                            />
                          </svg>
                          <span>
                            Completed
                          </span>
                        </div>
                        <button
                          class="button   is-primary "
                          data-test=""
                          type="button"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="undefined undefined"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 512 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                      />
                    </svg>
                    <span>
                      Completed
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="fade-in"
          >
            <section
              class="section has-margin has-background"
              data-test=""
            >
              <div
                class="card"
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="media-content"
                    >
                      <h5
                        class="title is-5"
                        id=""
                      >
                        Address Information
                      </h5>
                    </div>
                    <div
                      class="media-right"
                    >
                       
                      <div>
                        <div
                          class="undefined undefined"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 352 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                          <span>
                            Incomplete
                          </span>
                        </div>
                        <button
                          class="button   is-primary "
                          data-test=""
                          type="button"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="undefined undefined"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 352 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      />
                    </svg>
                    <span>
                      Incomplete
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="fade-in"
          >
            <section
              class="section has-margin has-background"
              data-test=""
            >
              <div
                class="card"
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="media-content"
                    >
                      <h5
                        class="title is-5"
                        id=""
                      >
                        Declaration Risk Management
                      </h5>
                    </div>
                    <div
                      class="media-right"
                    >
                       
                      <div>
                        <div
                          class="undefined undefined"
                        >
                          <svg
                            fill="currentColor"
                            height="1em"
                            stroke="currentColor"
                            stroke-width="0"
                            viewBox="0 0 352 512"
                            width="1em"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                            />
                          </svg>
                          <span>
                            Incomplete
                          </span>
                        </div>
                        <button
                          class="button   is-primary "
                          data-test=""
                          type="button"
                        >
                          Edit
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="undefined undefined"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 352 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                      />
                    </svg>
                    <span>
                      Incomplete
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="fade-in"
          >
            <section
              class="section has-margin has-background"
              data-test=""
            >
              <div
                class="card"
              >
                <div
                  class="card-content"
                >
                  <div
                    class="media"
                  >
                    <div
                      class="media-content"
                    >
                      <h5
                        class="title is-5"
                        id=""
                      >
                        Report
                      </h5>
                    </div>
                    <div
                      class="media-right"
                    >
                       
                      <div>
                        <button
                          class="button   is-primary "
                          data-test=""
                          type="button"
                        >
                          View
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </div>
        </section>
      </section>
    </div>
  </body>,
  "container": <div>
    <div
      class="el-snack-holder"
    />
    <section
      class="section has-background"
      data-test=""
    >
      <div
        class="fade-in"
      >
        <section
          class="section has-padding has-background"
          data-test=""
        >
          <div
            class="level"
            data-test=""
          >
            <div
              class="level-left"
              data-test=""
            >
              <div
                class="level-item"
                data-test=""
              >
                <section
                  class="section is-flex is-flex-column has-background"
                  data-test=""
                >
                  <h3
                    class="title is-3 mb-5"
                    id=""
                  >
                    <a
                      class="dynamic-link "
                      href="#"
                    />
                  </h3>
                  <h5
                    class="subtitle is-5"
                    id=""
                  />
                </section>
              </div>
            </div>
            <div
              class="level-right"
              data-test=""
            >
              <div
                class="level-item"
                data-test=""
              >
                <button
                  class="button   is-primary "
                  data-test=""
                  disabled=""
                  type="button"
                >
                  Update Status
                </button>
              </div>
            </div>
          </div>
          <div
            class="progress-bar"
          >
            <div
              class="filler"
              style="width: 0%;"
            />
          </div>
          <div
            class="has-text-right"
          >
            0
            /
            5
             
            <span>
              Completed
            </span>
          </div>
        </section>
      </div>
      <section
        class="section has-padding has-margin has-background"
        data-test=""
      >
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Personal Details
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          />
                        </svg>
                        <span>
                          Completed
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    />
                  </svg>
                  <span>
                    Completed
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Primary ID
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        <span>
                          Incomplete
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 352 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                  <span>
                    Incomplete
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Secondary ID
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 512 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                          />
                        </svg>
                        <span>
                          Completed
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    />
                  </svg>
                  <span>
                    Completed
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Address Information
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        <span>
                          Incomplete
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 352 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                  <span>
                    Incomplete
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Declaration Risk Management
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <div
                        class="undefined undefined"
                      >
                        <svg
                          fill="currentColor"
                          height="1em"
                          stroke="currentColor"
                          stroke-width="0"
                          viewBox="0 0 352 512"
                          width="1em"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                          />
                        </svg>
                        <span>
                          Incomplete
                        </span>
                      </div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        Edit
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="undefined undefined"
                >
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 352 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                    />
                  </svg>
                  <span>
                    Incomplete
                  </span>
                </div>
              </div>
            </div>
          </section>
        </div>
        <div
          class="fade-in"
        >
          <section
            class="section has-margin has-background"
            data-test=""
          >
            <div
              class="card"
            >
              <div
                class="card-content"
              >
                <div
                  class="media"
                >
                  <div
                    class="media-content"
                  >
                    <h5
                      class="title is-5"
                      id=""
                    >
                      Report
                    </h5>
                  </div>
                  <div
                    class="media-right"
                  >
                     
                    <div>
                      <button
                        class="button   is-primary "
                        data-test=""
                        type="button"
                      >
                        View
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </div>
      </section>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
